--- a/main.html
+++ b/main.html
@@ -7,6 +7,26 @@
 </head>
 
 <body>
+	<table>
+		<thead>
+			<tr>
+			<td>
+				Roll number
+			</td>
+			<td>
+				Name
+			</td>
+				</tr>
+		</thead>
+		<tr>
+			<td>19R11A04K9</td>
+			<td>Sachin</td>
+		</tr>
+		<tr>
+			<td>19R11A04K7</td>
+			<td>Nikhil</td>
+		</tr>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
