--- a/main.html
+++ b/main.html
@@ -18,6 +18,7 @@
 			</td>
 				</tr>
 		</thead>
+		<tbody>
 		<tr>
 			<td>19R11A04K9</td>
 			<td>Sachin</td>
@@ -26,6 +27,7 @@
 			<td>19R11A04K7</td>
 			<td>Nikhil</td>
 		</tr>
+			</tbody>
 	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
